--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-##🔥 Flam iOS Assignment Submission
+#🔥 Flam iOS Assignment Submission
 This repository contains the completed solutions for two selected challenges from the Flam iOS Developer Assignment. Each project follows best practices and highlights critical iOS architecture patterns, modularity, and UI/UX responsiveness.
 
 ✅ Selected Challenges
