--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-#🔥   Flam iOS Assignment Submission
+#   Flam iOS Assignment Submission
 
 This repository contains the completed solutions for **two selected challenges** from the Flam iOS Developer Assignment. Each project demonstrates clean architecture, modular component design, and responsiveness tailored for a seamless user experience.
 
